--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "node index.js",
     "start-watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\""
+    "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
+    "migrate_down": "cd server && migrate-mongo down",
+    "migrate_up": "cd server && migrate-mongo up",
+    "migrate_status": "cd server && migrate-mongo status",
+    "migrate-mongo" : "cd server && migrate-mongo"
   },
   "repository": {
     "type": "git",
@@ -25,9 +29,11 @@
     "express": "^4.17.1",
     "express-subdomain": "^1.0.5",
     "lodash": "^4.17.15",
+    "migrate-mongo": "^7.2.1",
     "mongoose": "^5.9.21"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
 }
