--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "start-watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
+    "test:coverage": "jest --coverage --passWithNoTests",
     "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
     "migrate-mongo": "cd server && migrate-mongo",
     "migrate_down": "cd server && migrate-mongo down",
@@ -33,7 +34,11 @@
     "mongoose": "^5.9.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "concurrently": "^5.2.0",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4"
   }
 }
