removing models from test case, updated docs for command

--- a/jest.config.json
+++ b/jest.config.json
@@ -7,7 +7,8 @@
       "rootDir": "server",
       "testEnvironment": "node",
       "coveragePathIgnorePatterns": [
-        "/node_modules/"
+        "/node_modules/",
+        "server/models"
       ]  
 
 }
