--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start-watch": "nodemon index.js",
-    "test": "jest ",
+    "test": "jest --runInBand",
     "test:coverage": "jest --coverage",
     "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
     "migrate-mongo": "cd server && migrate-mongo",
@@ -39,7 +39,7 @@
     "babel-jest": "^26.1.0",
     "concurrently": "^5.2.0",
     "jest": "^26.1.0",
-    "nodemon": "^2.0.4",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4"
   }
 }
