running test sequentially not parellaly, reporting coverage in html as well

--- a/jest.config.json
+++ b/jest.config.json
@@ -9,6 +9,7 @@
       "coveragePathIgnorePatterns": [
         "/node_modules/",
         "server/models"
-      ]  
+      ],
+      "coverageReporters": ["text","html"]
 
 }
