--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "start-watch": "nodemon index.js",
     "test": "jest --runInBand",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --runInBand",
     "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
     "migrate-mongo": "cd server && migrate-mongo",
     "migrate_down": "cd server && migrate-mongo down",
