--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "start-watch": "nodemon index.js",
-    "test": "jest --runInBand",
-    "test:coverage": "jest --coverage --runInBand",
+    "test": "jest",
+    "test:watch": "jest --runInBand",
+    "test:coverage": "jest --coverage",
     "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
     "migrate-mongo": "cd server && migrate-mongo",
     "migrate_down": "cd server && migrate-mongo down",
