--- a/logger/package.json
+++ b/logger/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Supreet Sethi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "crypto": "^1.0.1"
+  }
 }
