--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "rules": {
         "semi": ["error", "always"],
         "quotes": ["error", "double"],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "linebreak-style": ["windows"]
     }
 }
