--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "test": "jest",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
