--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-watch": "nodemon index.js",
     "test": "jest",
     "test:watch": "jest --runInBand",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest  --runInBand --coverage",
     "dev": "concurrently \"npm run start-watch\" \"cd client && npm run start\"",
     "migrate-mongo": "cd server && migrate-mongo",
     "migrate_down": "cd server && migrate-mongo down",
